# eventing

./: CMakeLists.txt
n1ql-functions/evaluator/: CMakeLists.txt  fix-rpath.sh
n1ql-functions/evaluator-client/: main.go
n1ql-functions/evaluator-client/adapter/: configuration.go  function.go  library.go
n1ql-functions/evaluator-client/babysitter/: babysitter.go
n1ql-functions/evaluator-client/client/: client.go  configuration.go  evaluator.go  notification.go  port.go  scheduler.go
n1ql-functions/evaluator-client/common/: common.go
n1ql-functions/evaluator-client/configuration/: configuration.go
n1ql-functions/evaluator-client/evaluator/: evaluator.go
n1ql-functions/evaluator-client/function/: function.go
n1ql-functions/evaluator-client/port/: port.go
n1ql-functions/evaluator-client/process/: process.go
n1ql-functions/evaluator-client/server/: handlers.go  server.go
n1ql-functions/evaluator-client/storage/: storage.go
n1ql-functions/evaluator/include/: constants.h  evaluator-server.h  evaluator.h  function.h  library.h  notification-client.h  utils.h
n1ql-functions/evaluator/src/: constants.cc  evaluator-server.cc  evaluator.cc  main.cc  notification-client.cc
n1ql-functions/protobuf/: evaluator.proto  fix-rpath.sh  setup-proto.sh
n1ql-functions/tools/: pack.js
n1ql-functions/tools/sample/: math.js  math.json
v8_consumer/include/: client.h  queue.h  v8worker.h
v8_consumer/src/: client.cc  v8worker.cc
